# Sphere-difraction

./: .gitignore  Helper Functions.cpp  Helper Functions.h  LICENSE.txt  README.md  Special Functions.cpp  Special Functions.h  Sphere difraction.cpp  Sphere difraction.h  main.cpp  pyproject.toml  snapshot_configs.py
app/: __main__.py  main.py
app/application/: cache.py  computation.py  controller.py
app/ui/: main_window.py  parameter_panel.py  settings_dialog.py  ui_config.py
benchmarks/: benchmark.md  benchmark_calculate_S.py  plot_benchmarks.py  run_and_plot.py
core/: Parameters.py  __init__.py  materials.py  parameters.py  ploting_functions.py  sphere_difraction.py
core/inverse_problem/: brute_force_solver.py  optimization.py  search_space.py  solver_base.py
docs/: ARCHITECTURE.md
examples/: materials.csv
python/: Parameters.py  main.ipynb  ploting_functions.py  sphere_difraction.py
scripts/: generate_snapshots.py
tests/: conftest.py  test_body_parameters.py  test_coefficients.py  test_difraction.py  test_materials.py  test_observation_parameters.py  test_optimization.py  test_parameters.py  test_scattering.py  test_search_space.py  test_snapshots.py  test_special.py
tests/snapshots/: conducting_sphere_0.3GHz.npz  conducting_sphere_1.0GHz.npz  conducting_sphere_2.0GHz.npz  lossless_coated_0.3GHz.npz  lossless_coated_1.0GHz.npz  lossless_coated_2.0GHz.npz  lossless_dielectric_0.3GHz.npz  lossless_dielectric_1.0GHz.npz  lossless_dielectric_2.0GHz.npz  lossy_coated_0.3GHz.npz  lossy_coated_1.0GHz.npz  lossy_coated_2.0GHz.npz  (+4 more)
(+3 files in other folders)
